# rust_orm

./: Cargo.toml  README.md  diesel.toml
src/: lib.rs
src/data/: database.rs
src/migrations/2025-06-05-025019_products_table/: down.sql  up.sql
src/migrations/2025-06-09-053229_inventory/: down.sql  up.sql
src/migrations/2025-07-03-023031_restock_history/: down.sql  up.sql
src/models/: inventory_model.rs  mod.rs  product_model.rs  restock_history_model.rs  schema.rs
src/services/: inventory_service.rs  mod.rs  product_service.rs
