[package]
name = "rust_orm"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
diesel = { version = "2.2.10", features = ["chrono"] }
diesel-async = { version = "0.5.2", features = ["mysql", "deadpool"] }
dotenvy = "0.15.7"
once_cell = "1.21.3"
tokio = { version = "1.45.1", features = ["full"] }
