[package]
name = "rust_orm"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
diesel = { version = "2.2.12", features = ["chrono"] }
diesel-async = { version = "0.6.1", features = ["mysql", "deadpool"] }
dotenvy = "0.15.7"
once_cell = "1.21.3"
serial_test = "3.2.0"
tokio = { version = "1.46.1", features = ["full"] }
